k8s/ingress-external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: auth-service.auth-service.svc.cluster.local
  ports:
    - port: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: flag-service.flag-service.svc.cluster.local
  ports:
    - port: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: targeting-service.targeting-service.svc.cluster.local
  ports:
    - port: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: evaluation-service.evaluation-service.svc.cluster.local
  ports:
    - port: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: analytics-service.analytics-service.svc.cluster.local
  ports:
    - port: 8005
